# sample-project

./: CMakeLists.txt  Makefile.am  README.md  configure.ac
include/: Makefile.am
myadd/: Makefile.am
src/: Makefile.am  main.cpp
